updated index removed header

--- a/index.html
+++ b/index.html
@@ -90,7 +90,7 @@
       <!-- Navbar End -->
 
       <!-- Hero Area Start -->
-      <div id="hero-area" class="hero-area-bg">
+      <!-- <div id="hero-area" class="hero-area-bg">
         <div class="overlay"></div>
         <div class="container">
           <div class="row">
@@ -113,9 +113,9 @@
                 <br>
                 <br>
                 <br>
-                <br>               
+                <br>          -->      
                 <!-- 3 columns -->
-                <div class="container">
+               <!--  <div class="container">
                   <div class="row">
                     
                     <div class="col-xs-12 col-sm-4">
@@ -139,13 +139,13 @@
                       </div>
                     </div> 
                   </div>
-                </div>
+                </div> -->
                 <!-- 3 columns -->
-              </div>
+       <!--        </div>
             </div>
           </div>
         </div>
-      </div>
+      </div> -->
       <!-- Hero Area End -->
 
     <!-- Experiences Section Start -->
@@ -211,7 +211,7 @@
         <div class="row">
           <div class="col-lg-4 col-md-4 col-sm-6 col-xs-6">
             <div class="img-thumb wow fadeInLeft" data-wow-delay="0.3s">
-              <img class="img-fluid" src="assets/img/about/about-3.jpg" alt="">
+              <img class="img-fluid" src="assets/img/about/about-4.png" alt="">
             </div>
           </div> 
           <div class="col-lg-8 col-md-8 col-sm-12 col-xs-12">
@@ -220,9 +220,9 @@
               <br> 
               <p>Driven by curiosity, I decided to go to a hackathon (where students gather, pull all-nighters and create fun projects) to see what all the hype was about! At <a href="https://devpost.com/software/wanderlust-a-visual-and-interactive-way-to-wander" target="_blank">Hack the North 2016</a>, I delighted in bringing my designs to life through code.</p>
               <br>
-              <p>I am fascinated by how people think, behave and work, and how technology impacts our daily lives. Therefore, my next goal was to gain experience as a developer intern while being able to continue to practice UX skills. I later interned at Trillium Health Partners as a UX Developer where my interest in conducting user research grew.</p>
+              <p>I am fascinated by how people think, behave and work, and how technology impacts our daily lives. Therefore, my next goal was to gain experience as a developer intern while being able to continue to practice UX skills. I later interned at Trillium Health Partners as a UX Developer where my interest in conducting user research grew. From there, I did UX research across various fields from healthcare to telecommunications to video gaming to cybersecurity.</p>
               <br>
-               <p>Currently, I am pursuing a Master of Math in Computer Science focusing in <a href="http://hci.cs.uwaterloo.ca/" target="_blank">Human-Computer Interaction at the University of Waterloo</a>, where I am advised by <a href="http://edithlaw.ca/" target="_blank">Dr. Edith Law</a>.</p>
+               <p>Currently, I am the first UX Researcher at Arctic Wolf Networks, a unicorn valuation in cybersecurity. Here, I am championing UX best practices across our organization and driving the frist external research programs while building stronger enterprise and internal relationships. <p>
             <br>
             <a target="_blank" href="assets/resume.pdf" class="btn btn-common"><i class="icon-paper-clip"></i> Download Resume</a>
             <a href="#contact" class="btn btn-danger"><i class="icon-speech"></i>  Contact Me</a>
