--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
 
     <!-- Experiences Section Start -->
     <section id="services" class="services section-padding">
-      <h2 class="section-title wow flipInX" data-wow-delay="0.4s">Experiences</h2>
+      <h2 class="section-title wow flipInX" data-wow-delay="0.4s"><br> Experiences</h2>
       <div class="container">
         <div class="row">
           <!-- Services item -->
